--- a/项目与实践/格式化字符串漏洞解析.md
+++ b/项目与实践/格式化字符串漏洞解析.md
@@ -337,8 +337,8 @@ rsp  0x7fffffffdb50 <- 0x41 /* '\A' */
      0x7fffffffdb58 -> 0x7fffffffdb50 0x41 /* '\A' */ //target
      0x7fffffffdb60 -> 0x61616161616161 /* 'aaaaaaa' */
      0x7fffffffdb68 -> 0xa7726df524ad0100
-rbp  0x7fffffffdb70 <- 0x4018b0 (__libc_csu_init) 鈼傗€?0x2b48873d8d4c5741
-     0x7fffffffdb78 <- 0x401159 (__libc_start_main+777) 鈼傗€?0x810000d950e8c789
+rbp  0x7fffffffdb70 <- 0x4018b0 (__libc_csu_init) 
+     0x7fffffffdb78 <- 0x401159 (__libc_start_main+777) 
      0x7fffffffdb80 -> 0x0
      0x7fffffffdb88 -> 0x100000000
 ```
