--- a/项目与实践/格式化字符串漏洞解析.md
+++ b/项目与实践/格式化字符串漏洞解析.md
@@ -324,8 +324,8 @@ rsp  0x7fffffffdb50 <- 0xa /* '\n' */
      0x7fffffffdb58 -> 0x7fffffffdb50 0xa /* '\n' */ //target
      0x7fffffffdb60 -> 0x61616161616161 /* 'aaaaaaa' */
      0x7fffffffdb68 -> 0xa7726df524ad0100
-rbp  0x7fffffffdb70 <- 0x4018b0 (__libc_csu_init) 鈼傗€?0x2b48873d8d4c5741
-     0x7fffffffdb78 <- 0x401159 (__libc_start_main+777) 鈼傗€?0x810000d950e8c789
+rbp  0x7fffffffdb70 <- 0x4018b0 (__libc_csu_init) 
+     0x7fffffffdb78 <- 0x401159 (__libc_start_main+777) 
      0x7fffffffdb80 -> 0x0
      0x7fffffffdb88 -> 0x100000000
 ```
@@ -502,7 +502,7 @@ libc_base = 0x7ffcf4ebbaa8-231-libc.sym['__libc_start_main']
 stack = 0x7ffcf4ebb980+0x8
 ```
 
-`0x7ffcf4ebb980`存放了`RBP`的信息，加8就变成了`main`的栈基址；`0x7ffcf4ebbaa8`中存放了`__libc_start_main`偏移后的地址，经过处理可以得到`libc`的基址。随后利用`one_gadget`获取跳转目标：
+`0x7ffcf4ebb980`存放了`RBP`的信息，`RBP`所指向的内容是`main`的栈基址；`0x7ffcf4ebbaa8`中存放了`__libc_start_main`偏移后的地址，经过处理可以得到`libc`的基址。随后利用`one_gadget`获取跳转目标：
 
 ```shell
 hjc18@Chernobyl-WorkStation:~/PWN/qwb2020/siri$ one_gadget libc.so.6
