--- a/项目与实践/格式化字符串漏洞解析.md
+++ b/项目与实践/格式化字符串漏洞解析.md
@@ -345,7 +345,7 @@ rbp  0x7fffffffdb70 <- 0x4018b0 (__libc_csu_init)
 
 ## 题目分析
 
-`check`信息如下，保护全开：
+以2020强网杯"Siri"一题为例，`check`信息如下，保护全开：
 
 ```shell
 [*] '/home/hjc18/PWN/qwb2020/siri/Siri'
